--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,39 @@
+# .gitattributes generated at https://gitattributes.io/api/web%2Cpython
+# Basic .gitattributes for a python repo.
+
+# Source files
+# ============
+*.pxd    text diff=python
+*.py     text diff=python
+*.py3    text diff=python
+*.pyw    text diff=python
+*.pyx    text diff=python
+*.pyz    text diff=python
+
+# Binary files
+# ============
+*.db     binary
+*.p      binary
+*.pkl    binary
+*.pickle binary
+*.pyc    binary
+*.pyd    binary
+*.pyo    binary
+
+# Jupyter notebook
+*.ipynb  text
+
+# Note: .db, .p, and .pkl files are associated
+# with the python modules ``pickle``, ``dbm.*``,
+# ``shelve``, ``marshal``, ``anydbm``, & ``bsddb``
+# (among others).
+
 ## GITATTRIBUTES FOR WEB PROJECTS
 #
 # These settings are for any web project.
-#
 # Details per file setting:
 #   text    These files should be normalized (i.e. convert CRLF to LF).
 #   binary  These files are binary and should be left untouched.
-#
 # Note that binary is a macro for -text -diff.
 ######################################################################
 
@@ -20,7 +48,7 @@
 *.bat             text eol=crlf
 *.cmd             text eol=crlf
 *.coffee          text
-*.css             text diff=css
+*.css             text
 *.htm             text diff=html
 *.html            text diff=html
 *.inc             text
@@ -42,7 +70,6 @@
 *.scm             text
 *.scss            text diff=css
 *.sh              text eol=lf
-.husky/*          text eol=lf
 *.sql             text
 *.styl            text
 *.tag             text
@@ -55,13 +82,13 @@
 Dockerfile        text
 
 # Documentation
-*.ipynb           text eol=lf
-*.markdown        text diff=markdown
-*.md              text diff=markdown
-*.mdwn            text diff=markdown
-*.mdown           text diff=markdown
-*.mkd             text diff=markdown
-*.mkdn            text diff=markdown
+*.ipynb           text
+*.markdown        text
+*.md              text
+*.mdwn            text
+*.mdown           text
+*.mkd             text
+*.mkdn            text
 *.mdtxt           text
 *.mdtext          text
 *.txt             text
@@ -83,7 +110,6 @@ TODO              text
 # Templates
 *.dot             text
 *.ejs             text
-*.erb             text
 *.haml            text
 *.handlebars      text
 *.hbs             text
@@ -93,7 +119,6 @@ TODO              text
 *.mustache        text
 *.njk             text
 *.phtml           text
-*.svelte          text
 *.tmpl            text
 *.tpl             text
 *.twig            text
@@ -109,19 +134,13 @@ TODO              text
 .gitconfig        text
 .htaccess         text
 *.lock            text -diff
-package.json      text eol=lf
-package-lock.json text eol=lf -diff
-pnpm-lock.yaml    text eol=lf -diff
-.prettierrc       text
-yarn.lock         text -diff
+package-lock.json text -diff
 *.toml            text
 *.yaml            text
 *.yml             text
 browserslist      text
 Makefile          text
 makefile          text
-# Fixes syntax highlighting on GitHub to allow comments
-tsconfig.json     linguist-language=JSON-with-Comments
 
 # Heroku
 Procfile          text
@@ -169,7 +188,6 @@ Procfile          text
 *.as              binary
 *.asf             binary
 *.asx             binary
-*.avi             binary
 *.fla             binary
 *.flv             binary
 *.m4v             binary
@@ -201,15 +219,9 @@ Procfile          text
 # Executables
 *.exe             binary
 *.pyc             binary
-# Prevents massive diffs caused by vendored, minified files
-**/.yarn/releases/**   binary
-**/.yarn/plugins/**    binary
 
 # RC files (like .babelrc or .eslintrc)
 *.*rc             text
 
 # Ignore files (like .npmignore or .gitignore)
 *.*ignore         text
-
-# Prevents massive diffs from built files
-dist/*            binary
