--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==2.3.3"
-frozen-flask = "==0.19"
+flask = "*"
+frozen-flask = "*"
 markdown = "==3.4.1"
 pytest = ">=7.2.1"
 pytest-cov = ">=4.0.0"
