--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 flask = "*"
 frozen-flask = "*"
-markdown = "==3.4.1"
+markdown = "*"
 pytest = ">=7.2.1"
 pytest-cov = ">=4.0.0"
 flake8 = ">=6.0.0"
