--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.0
-Frozen-Flask==1.0.1
-Markdown==3.4.1
+Flask>=3.0.0
+Frozen-Flask>=1.0.1
+Markdown>=3.4.1
 pytest>=7.2.1
 pytest-cov>=4.0.0
 flake8>=6.0.0
