update events module

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 flask = "*"
 frozen-flask = "*"
 markdown = "*"
+pydantic = "*"
 pytest = ">=7.2.1"
 pytest-cov = ">=4.0.0"
 flake8 = ">=6.0.0"
