--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Migration file
+migrations/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,flask
 
