Fix linting issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,10 @@ exclude = migrations/*
 # W503: https://github.com/psf/black/search?q=W503&unscoped_q=W503
 # E231: https://github.com/psf/black/issues/1202
 ignore = BLK100,E231,W503
+# F401: imported but unused. https://flask.palletsprojects.com/en/3.0.x/patterns/packages/
+per-file-ignores = website/*/__init__.py:F401
+# F821: undefined name 'forbid'. https://docs.pydantic.dev/latest/api/config/#pydantic.config.ExtraValues
+builtins = forbid
 statistics = 1
 max-line-length = 120
 exclude = migrations/*
