--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,10 @@ max-line-length = 120
 exclude = migrations/*
 max-complexity = 10
 
+[isort]
+# Make isort play nice with black
+multi_line_output = 3
+
 [tool:pytest]
 minversion = 7.0
 testpaths = tests
