isort + black compatibility

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,7 @@ exclude = migrations/*
 max-complexity = 10
 
 [isort]
-# Make isort play nice with black
-multi_line_output = 3
+profile = "black"
 
 [tool:pytest]
 minversion = 7.0
