--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,9 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install tox
+            - name: Initiate Flask .env file
+              run: |
+                  python init_env.py
             - name: Project internals test build
               run: "tox -e py${{ matrix.python }}"
             - name: Send coverage report to codeclimate
