--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,14 @@
-name: Build flask app and deploy to gh-pages
+name: Build and Deploy
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+        - master
   pull_request:
-    branches: [ "master" ]
+    branches:
+        - master
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
       branch:
@@ -24,13 +26,9 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    # Check out the repository
     - uses: actions/checkout@v4
-
-    # Set up Python, install dependencies, and run tests
-    - name: Setup Python 3.10
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
@@ -42,22 +40,9 @@ jobs:
     - name: Initialize Flask .env file
       run: |
         python init_env.py
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        python -m pytest --cov-report term-missing --cov=website
-
-    # Build the application
     - name: Build Frozen-Flask web application
       run: |
         python build.py
-
-    # Deploy to gh-pages
     - name: Deploy to gh-pages
       uses: JamesIves/github-pages-deploy-action@4.1.1
       with:
