--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ profile = "black"
 [tool:pytest]
 minversion = 7.0
 testpaths = tests
-addopts = -vvv --cov-report term-missing --cov=website
+addopts = -vvv --cov-report term-missing --cov=website --cov-branch
