--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Download Artifacts
       uses: actions/download-artifact@v1
       with:
-        name: website
+        name: site
     - name: Deploy to gh-pages
       uses: JamesIves/github-pages-deploy-action@4.1.1
       with:
